--- a/src/app/components/front/pages/maintenance/maintenance.component.scss
+++ b/src/app/components/front/pages/maintenance/maintenance.component.scss
@@ -65,6 +65,6 @@
 }
 
 .wrapper {
-	background: linear-gradient(rgba(0, 255, 255, 0.4), rgba(0, 255, 255, 0.4)), url(../../../../assets/img/maintenance_back.png) no-repeat center center;
+	background: linear-gradient(rgba(0, 255, 255, 0.4), rgba(0, 255, 255, 0.4)), url(../../../../../assets/img/maintenance_back.png) no-repeat center center;
     background-size: cover;
 }
