--- a/src/app/components/back/admin/pages/order-statuses/order-statuses-list.component.html
+++ b/src/app/components/back/admin/pages/order-statuses/order-statuses-list.component.html
@@ -15,14 +15,16 @@
 	<!-- Order Status Name Column -->
 	<ng-container cdkColumnDef="order_status_name">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Order Status Name </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.order_status_name}} </md-cell>
+		<md-cell *cdkCellDef="let row"> {{row.name}} </md-cell>
 	</ng-container>
 
 	<!-- Action Column -->
 	<ng-container cdkColumnDef="action">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Action </md-header-cell>
 		<md-cell fxLayout="row" *cdkCellDef="let row">
-			<button class="action-button" md-button [ngStyle]="{'background': '#1e91cf'}"><md-icon>create</md-icon></button>
+			<a [routerLink]="['/admin/order-statuses/edit/' + row._id]">
+				<button class="action-button action-button-create" md-button><md-icon>create</md-icon></button>
+			</a>
 		</md-cell>
 	</ng-container>
 
