--- a/src/app/components/back/admin/pages/seller-groups/seller-groups-list.component.html
+++ b/src/app/components/back/admin/pages/seller-groups/seller-groups-list.component.html
@@ -15,26 +15,28 @@
 	<!-- Name Column -->
 	<ng-container cdkColumnDef="name">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Name </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.name}} </md-cell>
+		<md-cell *cdkCellDef="let row"> {{row.general.name}} </md-cell>
 	</ng-container>
 
 	<!-- Description Column -->
 	<ng-container cdkColumnDef="description">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Description </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.description}} </md-cell>
+		<md-cell *cdkCellDef="let row"> {{row.general.description}} </md-cell>
 	</ng-container>
 
 	<!-- Actual fee rates Column -->
 	<ng-container cdkColumnDef="actual_fee_rates">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Actual Fee Rates </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.actual_fee_rates}} </md-cell>
+		<md-cell *cdkCellDef="let row"> {{row.fees.sales_fee_fixed}} </md-cell>
 	</ng-container>
 
 	<!-- Action Column -->
 	<ng-container cdkColumnDef="action">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Action </md-header-cell>
 		<md-cell fxLayout="row" *cdkCellDef="let row">
-			<button class="action-button" md-button [ngStyle]="{'background': '#1e91cf'}"><md-icon>create</md-icon></button>
+			<a [routerLink]="['/admin/seller-groups/edit/' + row._id]">
+				<button class="action-button action-button-create" md-button><md-icon>create</md-icon></button>
+			</a>
 		</md-cell>
 	</ng-container>
 
