--- a/src/app/components/back/admin/pages/seller-groups/tabs/comissions-fees/comissions-fees.component.html
+++ b/src/app/components/back/admin/pages/seller-groups/tabs/comissions-fees/comissions-fees.component.html
@@ -1,3 +1,51 @@
-<p>
-  comissions-fees works!
-</p>
+<div class="tab-fees" [ngStyle]="{'padding': '30px'}" [formGroup]="fees">
+	<div class="sales-fee">
+		<label class="label-title"> Sales fee </label>
+
+		<md-form-field>
+			<input mdInput formControlName="sales_fee_fixed">
+		</md-form-field>
+
+		<label class="label-plus"> + </label>
+
+		<md-form-field>
+			<input mdInput formControlName="sales_fee_percent">
+		</md-form-field>
+
+		<label class="label-percent"> % </label>
+	</div>
+
+	<div class="listing-fee">
+		<label class="label-title"> Listing fee / method </label>
+
+		<md-form-field>
+			<input mdInput formControlName="listing_fee_fixed">
+		</md-form-field>
+
+		<label class="label-plus"> + </label>
+
+		<md-form-field>
+			<input mdInput formControlName="listing_fee_percent">
+		</md-form-field>
+
+		<label class="label-percent"> % </label>
+
+		<md-select placeholder="Payment method" formControlName="listing_fee_payment">
+			<md-option value="1"> Seller balance </md-option>
+			<md-option value="2"> [MM] Payment Gateways </md-option>
+		</md-select>
+	</div>
+
+	<div class="signup-fee">
+		<label class="label-title"> Signup fee / method </label>
+
+		<md-form-field>
+			<input mdInput formControlName="signup_fee">
+		</md-form-field>
+
+		<md-select placeholder="Payment method" formControlName="signup_fee_payment">
+			<md-option value="1"> Seller balance </md-option>
+			<md-option value="2"> [MM] Payment Gateways </md-option>
+		</md-select>
+	</div>
+</div>
