--- a/src/app/components/back/admin/pages/stock-statuses/stock-statuses-form.component.html
+++ b/src/app/components/back/admin/pages/stock-statuses/stock-statuses-form.component.html
@@ -1,8 +1,21 @@
+<div class="title">
+	<h3 fxLayout="row" fxLayoutAlign="start center">
+		<md-icon [ngStyle]="{'margin-right': '10px'}">create</md-icon> 
+		<span> Add Stock Status </span>
+	</h3>
+</div>
+
 <div>
-	<md-form-field>
-		<input mdInput placeholder="Stock Status Name*" [formControl]="stockStatusName">
-		<md-error *ngIf="stockStatusName.hasError('required')">
-			This field is <strong> required </strong>
-		</md-error>
-	</md-form-field>
+	<form #stockStatusForm="ngForm" (ngSubmit)="saveStockStatus()" [formGroup]="form">
+		<md-form-field>
+			<input mdInput placeholder="Stock Status Name*" [formControl]="name">
+			<md-error *ngIf="name.hasError('required')">
+				This field is <strong> required </strong>
+			</md-error>
+		</md-form-field>
+
+		<div fxLayout="row" fxLayoutAlign="end center">
+			<button md-button class="submit-button"> Save Stock Status </button>
+		</div>
+	</form>
 </div>
