--- a/src/app/components/back/admin/pages/store-locations/store-locations-list.component.html
+++ b/src/app/components/back/admin/pages/store-locations/store-locations-list.component.html
@@ -28,7 +28,9 @@
 	<ng-container cdkColumnDef="action">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Action </md-header-cell>
 		<md-cell fxLayout="row" *cdkCellDef="let row">
-			<button class="action-button" md-button [ngStyle]="{'background': '#1e91cf'}"><md-icon>create</md-icon></button>
+			<a [routerLink]="['/admin/store-locations/edit/' + row._id]">
+				<button class="action-button action-button-create" md-button><md-icon>create</md-icon></button>
+			</a>
 		</md-cell>
 	</ng-container>
 
