--- a/src/app/components/common/image-selector/image-selector.component.scss
+++ b/src/app/components/common/image-selector/image-selector.component.scss
@@ -19,6 +19,23 @@
     cursor: pointer;
 }
 
+.image-cover {
+    position: absolute;
+    bottom: 0;
+    width: 100px;
+    height: 100px;
+    background: rgba(255, 255, 255, 0.7);
+
+    img {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+    }
+}
+
 .popover {
     position: relative;
     display: inline-block;
