--- a/src/app/components/back/admin/pages/currencies/currencies-list.component.html
+++ b/src/app/components/back/admin/pages/currencies/currencies-list.component.html
@@ -15,7 +15,7 @@
 	<!-- Currency Title Column -->
 	<ng-container cdkColumnDef="currency_title">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Currency Title </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.currency_title}} </md-cell>
+		<md-cell *cdkCellDef="let row"> {{row.title}} </md-cell>
 	</ng-container>
 
 	<!-- Code Column -->
@@ -33,7 +33,17 @@
 	<!-- Last Updated Column -->
 	<ng-container cdkColumnDef="last_updated">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Last Updated </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.last_updated}} </md-cell>
+		<md-cell *cdkCellDef="let row"> {{row.updated_at}} </md-cell>
+	</ng-container>
+
+	<!-- Action Column -->
+	<ng-container cdkColumnDef="action">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Action </md-header-cell>
+		<md-cell *cdkCellDef="let row"> 
+			<a [routerLink]="['/admin/currencies/edit/' + row._id]">
+				<button class="action-button action-button-create" md-button><md-icon>create</md-icon></button>
+			</a>
+		</md-cell>
 	</ng-container>
 
 	<md-header-row *cdkHeaderRowDef="displayedColumns"></md-header-row>
