--- a/src/app/components/back/admin/pages/languages/languages-form.component.html
+++ b/src/app/components/back/admin/pages/languages/languages-form.component.html
@@ -1,20 +1,40 @@
 <div>
-	<md-form-field>
-		<input mdInput placeholder="Language Name*" [formControl]="languageName">
-		<md-error *ngIf="languageName.hasError('required')">
-			This field is <strong> required </strong>
-		</md-error>
-	</md-form-field>
+	<form #currencyForm="ngForm" (ngSubmit)="saveLanguage()" [formGroup]="form">
+		<md-form-field>
+			<input mdInput placeholder="Language Name*" [formControl]="name">
+			<md-error *ngIf="name.hasError('required')">
+				This field is <strong> required </strong>
+			</md-error>
+		</md-form-field>
 
-	<md-select placeholder="Code">
-		<md-option value="en"> en </md-option>
-		<md-option value="cn"> cn </md-option>
-	</md-select>
+		<md-form-field>
+			<input mdInput placeholder="Code*" [formControl]="code">
+			<md-error *ngIf="code.hasError('required')">
+				This field is <strong> required </strong>
+			</md-error>
+		</md-form-field>
 
-	<md-form-field>
-		<input mdInput placeholder="Sort Order" [formControl]="sortOrder">
-		<md-error *ngIf="sortOrder.hasError('required')">
-			This field is <strong> required </strong>
-		</md-error>
-	</md-form-field>
+		<md-form-field>
+			<input mdInput placeholder="Locale*" [formControl]="locale">
+			<md-error *ngIf="locale.hasError('required')">
+				This field is <strong> required </strong>
+			</md-error>
+		</md-form-field>
+
+		<md-select placeholder="Status" [formControl]="status">
+			<md-option value="1"> Enabled </md-option>
+			<md-option value="0"> Disabled </md-option>
+		</md-select>
+
+		<md-form-field>
+			<input mdInput placeholder="Sort Order" [formControl]="sort_order">
+			<md-error *ngIf="sort_order.hasError('required')">
+				This field is <strong> required </strong>
+			</md-error>
+		</md-form-field>
+
+		<div fxLayout="row" fxLayoutAlign="end center">
+			<button md-button class="submit-button"> Save Language </button>
+		</div>
+	</form>
 </div>
